--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         </header>
 
         <main class="main">
+            <!-- Heading -->
             <div class="container">
                 <div class="main-heading">
                     <h2 class="main-heading_one">
@@ -65,104 +66,157 @@
                 />
             </div>
 
+            <!-- Tier List-->
             <div class="main-tiers">
                 <h2 class="main-tiers_heading">
                     Choose Your Fitness Journey: Explore Our Membership Tiers
                 </h2>
                 <div class="main-tiers_options">
-                    <div class="basic-tier">
-                        <h3>Basic</h3>
-                        <p>
-                            Entry-level membership suitable for individuals
-                            looking for standard access to gym facilities.
-                        </p>
+                    <div class="basic-tier tier-style cont-tier">
+                        <div>
+                            <h3>Basic</h3>
+                            <p>
+                                Entry-level membership suitable for individuals
+                                looking for standard access to gym facilities.
+                            </p>
 
-                        <ul>
-                            Features:
-                            <li>
-                                Unlimited access to gym equipment during regular
-                                hours
-                            </li>
-                            <li>Access to basic fitness classes.</li>
-                            <li>
-                                General use of amenities likelocker rooms and
-                                showers.
-                            </li>
-                        </ul>
+                            <ul>
+                                Features:
+                                <li>
+                                    Unlimited access to gym equipment during
+                                    regular hours
+                                </li>
+                                <li>Access to basic fitness classes.</li>
+                                <li>
+                                    General use of amenities likelocker rooms
+                                    and showers.
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div>
+                            <button class="btn-tiers">
+                                <a href="#">Buy now</a>
+                            </button>
+                        </div>
                     </div>
 
-                    <div class="premium-tier">
-                        <h3>Premium</h3>
-                        <p>
-                            An upgraded membership offering additional perks for
-                            those seeking a more comprehensive gym experience.
-                        </p>
+                    <div class="premium-tier tier-style cont-tier">
+                        <div>
+                            <h3>Premium</h3>
+                            <p>
+                                An upgraded membership offering additional perks
+                                for those seeking a more comprehensive gym
+                                experience.
+                            </p>
 
-                        <ul>
-                            Features:
-                            <li>Unlimited 24/7 gym access.</li>
-                            <li>
-                                Access to a wider variety of fitness classes,
-                                including specialty classes.
-                            </li>
-                            <li>
-                                Personalized workout plans or consultations.
-                            </li>
-                            <li>
-                                Discounts on merchandise and additional
-                                services.
-                            </li>
-                        </ul>
+                            <ul>
+                                Features:
+                                <li>Unlimited 24/7 gym access.</li>
+                                <li>
+                                    Access to a wider variety of fitness
+                                    classes, including specialty classes.
+                                </li>
+                                <li>
+                                    Personalized workout plans or consultations.
+                                </li>
+                                <li>
+                                    Discounts on merchandise and additional
+                                    services.
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div>
+                            <button class="btn-tiers">
+                                <a href="#">Buy now</a>
+                            </button>
+                        </div>
                     </div>
 
-                    <div class="VIP-tier">
-                        <h3>VIP</h3>
-                        <p>
-                            A top-tier membership with exclusive benefits and
-                            personalized services.
-                        </p>
+                    <div class="VIP-tier tier-style cont-tier">
+                        <div>
+                            <h3>VIP</h3>
+                            <p>
+                                A top-tier membership with exclusive benefits
+                                and personalized services.
+                            </p>
 
-                        <ul>
-                            Features:
-                            <li>All features of Premium Membership.</li>
-                            <li>
-                                Priority access to special events or classes.
-                            </li>
-                            <li>Dedicated personal trainer sessions.</li>
-                            <li>
-                                Exclusive access to premium amenities (sauna,
-                                spa, etc.).
-                            </li>
-                            <li>
-                                Special discounts or partnerships with local
-                                businesses.
-                            </li>
-                        </ul>
+                            <ul>
+                                Features:
+                                <li>All features of Premium Membership.</li>
+                                <li>
+                                    Priority access to special events or
+                                    classes.
+                                </li>
+                                <li>Dedicated personal trainer sessions.</li>
+                                <li>
+                                    Exclusive access to premium amenities
+                                    (sauna, spa, etc.).
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div>
+                            <button class="btn-tiers">
+                                <a href="#">Buy now</a>
+                            </button>
+                        </div>
                     </div>
 
-                    <div class="family">
-                        <h3>Family</h3>
-                        <p>
-                            Ideal for families or couples looking to work out
-                            together.
-                        </p>
+                    <div class="family-tier tier-style cont-tier">
+                        <div>
+                            <h3>Family</h3>
+                            <p>
+                                Ideal for families or couples looking to work
+                                out together.
+                            </p>
 
-                        <ul>
-                            Features:
-                            <li>
-                                All benefits of Basic or Premium Membership for
-                                multiple family members.
-                            </li>
-                            <li>
-                                Group fitness classes suitable for various ages
-                                and fitness levels.
-                            </li>
-                            <li>Family-friendly events or classes.</li>
-                            <li>
-                                Flexible billing options for joint memberships.
-                            </li>
-                        </ul>
+                            <ul>
+                                Features:
+                                <li>
+                                    All benefits of Basic or Premium Membership
+                                    for multiple family members.
+                                </li>
+                                <li>
+                                    Group fitness classes suitable for various
+                                    ages and fitness levels.
+                                </li>
+                                <li>Family-friendly events or classes.</li>
+                                <li>
+                                    Flexible billing options for joint
+                                    memberships.
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div>
+                            <button class="btn-tiers">
+                                <a href="#">Buy now</a>
+                            </button>
+                        </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="gym-img-section">
+                <div class="gym-img-heading">
+                    <h2>Where will be working out.</h2>
+                </div>
+
+                <div class="gym-img">
+                    <img
+                        src="img/gym-images-one.jpeg"
+                        alt="the gym"
+                    />
+                    <img
+                        src="img/gym-images-three.jpeg"
+                        alt="the gym"
+                    />
+                    <img
+                        src="img/gym-images-four.jpeg"
+                        alt="the gym"
+                    />
                 </div>
             </div>
         </main>
