added cta, and footer

--- a/index.html
+++ b/index.html
@@ -220,5 +220,45 @@
                 </div>
             </div>
         </main>
+
+        <section class="cta">
+            <div class="container">
+                <div class="cta-heading">
+                    <h2>Start working out! It's time!</h2>
+                    <p>
+                        Buy now one of our plans by clicking that button right
+                        over there!
+                    </p>
+                </div>
+
+                <div class="cta-btn">
+                    <button>
+                        <a href="#">Buy now</a>
+                    </button>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <p>&copy; 2024 Power Gym. All rights reserved.</p>
+
+            <div class="social-icons">
+                <a
+                    href="#"
+                    target="_blank"
+                    >Facebook</a
+                >
+                <a
+                    href="#"
+                    target="_blank"
+                    >Twitter</a
+                >
+                <a
+                    href="#"
+                    target="_blank"
+                    >Instagram</a
+                >
+            </div>
+        </footer>
     </body>
 </html>
